New package: LocalRegNeuralDE v0.1.0
UUID: 5882ba5a-74e7-4c16-a18e-2f4110103a84
Repo: git@github.com:avik-pal/LocalRegNeuralDE.jl.git
Tree: 84167e91690a00334b09978fd15e7decf149aa3e

--- a/Registry.toml
+++ b/Registry.toml
@@ -4,3 +4,4 @@ repo = "git@github.com:avik-pal/ResearchRegistry.git"
 description = "Registry storing Avik's research projects in Julia"
 
 [packages]
+5882ba5a-74e7-4c16-a18e-2f4110103a84 = { name = "LocalRegNeuralDE", path = "L/LocalRegNeuralDE" }
